# mcp-nexus-rag

./: .dockerignore  .env.example  .gitignore  .venv  AGENTS.md  CODE_REVIEW.md  INSTRUCTIONS.md  MEMORY.md  README.md  TODO.md  docker-compose.yml  http_server.py  pyproject.toml  requirements.txt  reranker_service.py  server.py  test_rag.py  visualizer.py
nexus/: __init__.py  cache.py  chunking.py  config.py  dedup.py  indexes.py  metrics.py  reranker.py  sync.py  tools.py  watcher.py
nexus/backends/: __init__.py  memgraph.py  neo4j.py  pgvector.py  qdrant.py
scripts/: install-hooks.sh  safe_cleanup.py  start-services.sh
tests/: conftest.py  test_chunking.py  test_coverage.py  test_ingestion_sync.py  test_integration.py  test_isolation.py  test_metrics.py  test_new_features.py  test_reranker.py  test_unit.py  test_watcher.py
